--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,8 +1,12 @@
 {
-  "recommendations": [
-    "ms-vscode.cmake-tools",
-    "ms-vscode.cpptools",
-    "wokwi.wokwi-vscode",
-    "github.vscode-github-actions"
-  ]
+    "recommendations": [
+        "ms-vscode.cpptools-extension-pack",
+        "ms-vscode.vscode-serial-monitor",
+        "raspberry-pi.raspberry-pi-pico",
+        "ms-vscode.cpptools",
+        "github.vscode-github-actions",
+        "marus25.cortex-debug",
+        "wokwi.wokwi-vscode",
+        "ms-vscode.cmake-tools"
+    ]
 }
